codepkg/objects/Closeout_Task__c.object
<CustomObject>
    <fields>
        <fullName>Acutal_Funding_TotalAmount__c</fullName>
        <formula>Federal_Cost_Share__c  +  Total_CDAA_Obligated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acutal Funding Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Closeout__c</fullName>
        <label>Application Closeout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead/Peer Review</fullName>
                </value>
                <value>
                    <fullName>PM1 Review</fullName>
                </value>
                <value>
                    <fullName>PM2/PAO Review</fullName>
                </value>
                <value>
                    <fullName>PM3 Review</fullName>
                </value>
                <value>
                    <fullName>GAR-AD Analyst Review</fullName>
                </value>
                <value>
                    <fullName>GAR-AD OT Review</fullName>
                </value>
                <value>
                    <fullName>GAR-AD Review</fullName>
                </value>
                <value>
                    <fullName>GAR-DD Analyst Review</fullName>
                </value>
                <value>
                    <fullName>GAR-DD OT Review</fullName>
                </value>
                <value>
                    <fullName>GAR-DD Review</fullName>
                </value>
                <value>
                    <fullName>GAR-Other</fullName>
                </value>
                <value>
                    <fullName>GAR-Analyst Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <formula>Approver__r.FirstName +&apos; &apos;+ Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_Name__c</fullName>
        <description>The field value is copied from field Authorized_Agent__c  of Closeout_Request__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorized Agent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The verified AA at closeout who signed the P.4.</inlineHelpText>
        <label>Authorized Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeout_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CALOES_ID__c</fullName>
        <formula>Subrecipient_Name__r.OES__c</formula>
        <label>CALOES ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDAA_Obligated_Amount__c</fullName>
        <formula>ROUND( Non_Federal_Share__c  * 0.75,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDAA Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Eligibility__c</fullName>
        <formula>TEXT(Incident__r.Cost_Share_Eligibility__c)</formula>
        <label>Cost Share Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Peer_Review_User__c</fullName>
        <formula>IF(    $User.Id  =  Peer_Review__r.Id  , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Peer Review User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Determination_Received_by_CalOES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Determination Received by CalOES</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_OES_Received_SR_Appeal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date OES Received SR’s Appeal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Declaration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determination_Sent_to_Applicant_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Determination Sent to Applicant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docusign_Status__c</fullName>
        <label>Docusign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>GAR COMPLETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>TEXT(Subrecipient_Name__r.Entity_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Approval__c</fullName>
        <label>FEMA Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <formula>Subrecipient_Name__r.Sub_Recipient_FIPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIPS#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Cost_Share__c</fullName>
        <formula>ROUND(Total_Small_Project_Award__c  * 0.75,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Cost Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Ajdustment__c</fullName>
        <formula>Total_CDAA_Obligated_Amount__c -  CDAA_Obligated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Ajdustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incident_End_Date__c</fullName>
        <formula>Incident__r.Incident_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Start_Date__c</fullName>
        <formula>Incident__r.Incident_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Subrecipient_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to summary of all Projects for this Subrecipient that are within this Incident.</description>
        <inlineHelpText>Links to summary of all Projects for this Subrecipient that are within this Incident.</inlineHelpText>
        <label>Incident Subrecipient Summary</label>
        <referenceTo>Incident_Subrecipient_Stage__c</referenceTo>
        <relationshipLabel>Closeout Tasks</relationshipLabel>
        <relationshipName>Closeout_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated with which incident specified</description>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipName>Project_CloseOut_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsNSPU__c</fullName>
        <formula>IF( Total_Small_Project_Amount_Claimed__c &lt;  Total_Small_Project_Award__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>IsNSPU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_Logged_User_Reviewer__c</fullName>
        <formula>IF( Reviewer__r.Id == $User.Id , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Logged User Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_Approver__c</fullName>
        <formula>IF( Approver__r.Id ==  $User.Id , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_logged_User_Owner__c</fullName>
        <formula>IF( Owner:User.Id ==  $User.Id , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current logged User Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LP_Adjustment_s__c</fullName>
        <label>LP Adjustment(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LP_Claimed_Cost__c</fullName>
        <label>LP Claimed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LP_FEMA_Approved_Amount__c</fullName>
        <label>LP FEMA Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LP_FIR_Eligible_Cost__c</fullName>
        <label>LP FIR Eligible Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Cost_Share__c</fullName>
        <formula>ROUND(  Non_Federal_Share__c  * 0.25 ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Cost Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSPO_Amount__c</fullName>
        <label>NSPO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSPO__c</fullName>
        <formula>IF(  NSPO_Amount__c  &gt; 0, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20) , &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSPO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSPU_Amount__c</fullName>
        <label>NSPU Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Share__c</fullName>
        <formula>ROUND(Total_Small_Project_Award__c  -  Federal_Cost_Share__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Federal Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Appeal_Period_Reason__c</fullName>
        <description>Justification for 60 Days Appeal override</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Appeal Period Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_Appeal_Period_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field enable user to bypass 60 days appeal validation on Cost Share staus validation.</description>
        <label>Override Appeal Period Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName +&apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF( Owner:User.LastName != null &amp;&amp; Owner:User.LastName != &apos;&apos; ,Owner:User.FirstName +&apos; &apos; + Owner:User.LastName,  Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peer Review</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeout_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>That field would capture the user who created the closeout task</description>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeout_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Adjustment_s__c</fullName>
        <label>SP Adjustment(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_Claimed_Cost__c</fullName>
        <label>SP Claimed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_FEMA_Approved_Amount__c</fullName>
        <label>SP  FEMA Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_FIR_Eligible_Cost__c</fullName>
        <label>SP FIR Eligible Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Declaration_Number__c</fullName>
        <formula>Incident__r.State_Declaration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Declaration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>FIR in Progress</fullName>
                </value>
                <value>
                    <fullName>OES Review</fullName>
                </value>
                <value>
                    <fullName>FEMA Workflow</fullName>
                </value>
                <value>
                    <fullName>PA Correspondence</fullName>
                </value>
                <value>
                    <fullName>Cost Share</fullName>
                </value>
                <value>
                    <fullName>Transmittals</fullName>
                </value>
                <value>
                    <fullName>FPU Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status_Workflow__c</fullName>
        <label>Sub-Status Workflow</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned RFI</fullName>
                </value>
                <value>
                    <fullName>Pending SR&apos;s RFI Response</fullName>
                </value>
                <value>
                    <fullName>Pending RFI review</fullName>
                </value>
                <value>
                    <fullName>Completed RFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery phase</fullName>
                </value>
                <value>
                    <fullName>Documentation review</fullName>
                </value>
                <value>
                    <fullName>Pending SR response</fullName>
                </value>
                <value>
                    <fullName>Narrative finalization</fullName>
                </value>
                <value>
                    <fullName>Pending FIR completion</fullName>
                </value>
                <value>
                    <fullName>PA Correspondence</fullName>
                </value>
                <value>
                    <fullName>Pending FEMA Response</fullName>
                </value>
                <value>
                    <fullName>FEMA RFI</fullName>
                </value>
                <value>
                    <fullName>FEMA FIR Response</fullName>
                </value>
                <value>
                    <fullName>FIR Letter Preparation</fullName>
                </value>
                <value>
                    <fullName>OES FIR Letter</fullName>
                </value>
                <value>
                    <fullName>1st Appeal</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>2nd Appeal</fullName>
                </value>
                <value>
                    <fullName>Pending Application Closeout</fullName>
                </value>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Cost Share in Progress</fullName>
                </value>
                <value>
                    <fullName>Pending OES Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subrecipient_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subrecipient Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Closeout Tasks</relationshipLabel>
        <relationshipName>Closeout_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IFIR: Small</fullName>
                </value>
                <value>
                    <fullName>IFIR: Small &amp; Large</fullName>
                </value>
                <value>
                    <fullName>IFIR: Small with NSPU</fullName>
                </value>
                <value>
                    <fullName>IFIR: Small with NSPU &amp; Large</fullName>
                </value>
                <value>
                    <fullName>IFIR: Small with NSPO appeal</fullName>
                </value>
                <value>
                    <fullName>IFIR: Large</fullName>
                </value>
                <value>
                    <fullName>Federal FIR: Application Closeout</fullName>
                </value>
                <value>
                    <fullName>Federal FIR: Application Closeout with NSPO</fullName>
                </value>
                <value>
                    <fullName>CDAA Cost Share FIR: Application Closeout</fullName>
                </value>
                <value>
                    <fullName>FMAG FIR: Incident Closeout</fullName>
                </value>
                <value>
                    <fullName>DR Incident Closeout</fullName>
                </value>
                <value>
                    <fullName>EM Incident Closeout</fullName>
                </value>
                <value>
                    <fullName>CDAA FIR: Application Closeout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Actual_Funding__c</fullName>
        <formula>ROUND(Federal_Cost_Share__c + CDAA_Obligated_Amount__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_CDAA_Obligated_Amount__c</fullName>
        <formula>IF( Federal_Cost_Share__c &gt;  Total_Small_Project_Amount_Claimed__c , 0, (Total_Small_Project_Amount_Claimed__c - Federal_Cost_Share__c)*0.75 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CDAA Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cal_OES_Recommended_Amount__c</fullName>
        <description>This will be total sum of all relevant  Project Closeouts Total Cal OES Recommended Amount.</description>
        <label>Total Cal OES Recommended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Claimed_Cost__c</fullName>
        <label>Total Claimed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_FEMA_Approved_Amount__c</fullName>
        <label>Total FEMA Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_FIR_Eligible_Cost__c</fullName>
        <label>Total FIR Eligible Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Local_Cost_Share__c</fullName>
        <formula>( Total_Small_Project_Amount_Claimed__c -  Federal_Cost_Share__c ) * 0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Local Cost Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Non_Federal_Share__c</fullName>
        <formula>ROUND(Total_Small_Project_Amount_Claimed__c  -  Federal_Cost_Share__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non Federal Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Projects__c</fullName>
        <label>Total Number Of Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Adjustment_s__c</fullName>
        <label>Total Project Adjustment(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Small_Project_Amount_Claimed__c</fullName>
        <description>Applicant Small Project Claimed Amount for NSPU Calculator</description>
        <label>Total Small Project Amount Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Small_Project_Award__c</fullName>
        <description>FEMA Final Approved Small Projects Amount for NSPU Calculator</description>
        <label>Total Small Project Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X60_days_Appeal__c</fullName>
        <formula>IF( ISBLANK(Determination_Sent_to_Applicant_Date__c),TODAY() - Determination_Sent_to_Applicant_Date__c , IF(TODAY()&gt;Determination_Sent_to_Applicant_Date__c, TODAY() - Determination_Sent_to_Applicant_Date__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>60 days Appeal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Closeout Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approver__c</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Peer_Review</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sub_Status_Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Peer_Review_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Assigned Peer Review</label>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Me</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sub_Status_Workflow__c</columns>
        <filterScope>Mine</filterScope>
        <label>Assigned to Me</label>
    </listViews>
    <listViews>
        <fullName>Assigned_to_My_Team</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sub_Status_Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_Logged_User_Reviewer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Assigned to My Team</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval_Request</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sub_Status_Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User_Approver__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Pending Review &amp; Approval</label>
    </listViews>
    <listViews>
        <fullName>Pending_Assignment</fullName>
        <columns>NAME</columns>
        <columns>NSPO__c</columns>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Incident__c</columns>
        <columns>Subrecipient_Name__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>Task_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sub_Status_Workflow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner__c</field>
            <operation>equals</operation>
            <value>Public Assistance PM1</value>
        </filters>
        <label>Pending Assignment</label>
        <sharedTo>
            <group>Public_Assistance_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_DAPS_Closeout_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Public Assistance DAPS</label>
        <queue>Public_Assistance_DAPS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_PM1_Closeout_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Public Assistance PM1</label>
        <queue>Public_Assistance_PM1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_PM2_PAO_Closeout_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Public Assistance PM2/PAO</label>
        <queue>Public_Assistance_PM2_PAO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Public_Assistance_PM3_Closeout_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Public Assistance PM3</label>
        <queue>Public_Assistance_PM3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>